updated image and css path

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       src="https://kit.fontawesome.com/1d91186edf.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -84,7 +84,7 @@
           <br />
           <div class="col-lg-6">
             <img
-              src="images/iphone6.png"
+              src="iphone6.png"
               class="rotate45"
               alt="iphone-mockup"
             />
@@ -135,7 +135,7 @@
             </h2>
             <img
               class="testimonial-img"
-              src="images/dog-img.jpg"
+              src="dog-img.jpg"
               alt="dog-image"
             />
             <em class="pebbles">Pebbles, New York</em>
@@ -147,7 +147,7 @@
             </h2>
             <img
               class="testimonial-img"
-              src="images/lady-img.jpg"
+              src="lady-img.jpg"
               alt="lady-img"
             />
             <em class="beverly">Beverly, Illinois</em>
@@ -178,14 +178,14 @@
     <!-- Press -->
 
     <section id="press">
-      <img class="pressimages" src="images/techcrunch.png" alt="tc-logo" />
-      <img class="pressimages" src="images/tnw.png" alt="tnw-logo" />
+      <img class="pressimages" src="techcrunch.png" alt="tc-logo" />
+      <img class="pressimages" src="tnw.png" alt="tnw-logo" />
       <img
         class="pressimages"
-        src="images/bizinsider.png"
+        src="bizinsider.png"
         alt="biz-insider-logo"
       />
-      <img class="pressimages" src="images/mashable.png" alt="mashable-logo" />
+      <img class="pressimages" src="mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
