Fixed the Image issue

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <!-- Press -->
 
     <section id="press">
-      <img class="pressimages" src="techcrunch.png" alt="tc-logo" />
+      <img class="pressimages" src="TechCrunch.png" alt="tc-logo" />
       <img class="pressimages" src="tnw.png" alt="tnw-logo" />
       <img
         class="pressimages"
